5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1884_3179.log
== TEST (2019-07-04 18:14:31) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i]==1);
	

-- ERROR:
File "XXXX", line 5
    if(v[i]==1);
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:14:33) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i]==1);
	

-- ERROR:
File "XXXX", line 5
    if(v[i]==1);
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:14:34) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i]==1);
	

-- EXECUTION TIME:
0.690202
-- ERROR:
  File "/home/codebench/codes/1884/3179/main.py", line 5
    if(v[i]==1);
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:14:42) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i]==1)
	

-- ERROR:
File "XXXX", line 5
    if(v[i]==1)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:09) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1);
	
-- ERROR:
File "XXXX", line 5
    if(v[i] == 1);
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:17) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:15:19) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
	
-- EXECUTION TIME:
0.534275
-- ERROR:
  File "/home/codebench/codes/1884/3179/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:15:19) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
z=zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
	
-- EXECUTION TIME:
0.618135
-- ERROR:
  File "/home/codebench/codes/1884/3179/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:45:39) 
-- CODE:
from numpy import *
u=array(eval(input("digite o vetor: ")))
z=zeros(size(u),dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
		for i in range(size(u)):
			if(u[i]==1):
				v[c]=v[c]+u[i]
				c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 9
    for i in range(size(u)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:46:16) 
-- CODE:
from numpy import *
u=array(eval(input("digite o vetor: ")))
z=zeros(size(u),dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:46:37) 
-- CODE:
from numpy import *
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u),dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:28) 
-- CODE:
from numpy import *
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:47:54) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:49:09) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:49:19) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:49:21) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- EXECUTION TIME:
1.18328
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1884/3179/main.py", line 11, in <module>
    v[c]=v[c]+u[i]
IndexError: index 7 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:49:48) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:50:59) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	   c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 8
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:01) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	   c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 8
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:02) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i] != 1):
		v[c]=v[c+u[i]]
	   c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 8
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:35) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i]!=1):
		v[c]=v[c+u[i]]
	   c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 8
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:51:36) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype = int)
c=0
for i in range(size(u)):
	if(v[i]!=1):
		v[c]=v[c+u[i]]
	   c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 8
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:52:12) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]]
	   c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
File "XXXX", line 8
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:49) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:53:53) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- EXECUTION TIME:
1.40273
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[0 0 0 0 1 1 1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[0 0 0 0 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:53) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:53:53) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:54:49) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)

	
-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:54:50) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)

	
-- ERROR:
File "XXXX", line 8
    c=c+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:55:14) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c+u[i]]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:56:03) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:56:14) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)

	
-- EXECUTION TIME:
0.997526
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:56:16) 
-- CODE:
from numpy import*
u=array(eval(input("digite o vetor: ")))
v=zeros(size(u), dtype=int)
c=0
for i in range(size(u)):
	if(u[i]!=1):
		v[c]=v[c]+u[i]
		c=c+1
for i in range(size(u)):
	if(u[i]==1):
		v[c]=v[c]+u[i]
		c=c+1
print(v)

	
-- EXECUTION TIME:
2.30916
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
